--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,14 @@
 </head>
 
 <body>
+    <div id="wrap">
+        <div class="n"></div>
+        <div class="n n1"></div>
+        <div class="n n2"></div>
+        <div class="n n3"></div>
+        <div class="n n4"></div>
+    </div>
+    <div id="block"></div>
     <canvas class="webgl"></canvas>
 </body>
 
