--- a/src/index.html
+++ b/src/index.html
@@ -9,11 +9,21 @@
 
 <body>
     <div id="wrap">
-        <div class="n"></div>
-        <div class="n n1"></div>
-        <div class="n n2"></div>
-        <div class="n n3"></div>
-        <div class="n n4"></div>
+        <div class="n">
+            <img src="/1.jpg" width="60" alt=""/>
+        </div>
+        <div class="n n1">
+            <img src="/2.jpg" width="60" alt=""/>
+        </div>
+        <div class="n n2">
+            <img src="/3.jpg" width="60" alt=""/>
+        </div>
+        <div class="n n3">
+            <img src="/4.jpg" width="60" alt=""/>
+        </div>
+        <div class="n n4">
+            <img src="/5.jpg" width="60" alt=""/>
+        </div>
     </div>
     <div id="block"></div>
     <canvas class="webgl"></canvas>
